Solucion a las imagenes y nombres

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Habilidades</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">Sobre mi</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contactame</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#Habilidades">Habilidades</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#Sobre-mi">Sobre mi</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#Contactame">Contactame</a></li>
                     </ul>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/nodejs.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/python.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -88,7 +88,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/java.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -97,7 +97,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/game.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/ruby.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -106,7 +106,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/php.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -115,7 +115,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/ci.png" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/nodejs.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un desarrollador experimentado en Node.js con una sólida comprensión de sus fundamentos y una amplia experiencia en la creación de aplicaciones robustas y eficientes. A continuación, detallo mis habilidades y competencias en esta tecnología:</p>
                                     <ul>
@@ -306,7 +306,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/python.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un desarrollador experimentado en Python con una sólida comprensión de sus fundamentos y una amplia experiencia en la creación de aplicaciones eficientes y robustas. A continuación, detallo mis habilidades y competencias en esta tecnología:</p>
                                     <ul>
@@ -345,7 +345,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/java.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un desarrollador experimentado en Java con una sólida comprensión de sus fundamentos y una amplia experiencia en el desarrollo de aplicaciones eficientes y escalables. A continuación, detallo mis habilidades y competencias en esta tecnología:</p>
                                     <ul>
@@ -384,7 +384,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ruby.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un desarrollador experimentado en Ruby on Rails con una sólida comprensión de sus fundamentos y una amplia experiencia en la creación de aplicaciones web robustas y escalables. A continuación, detallo mis habilidades y competencias en esta tecnología:</p>
                                     <ul>
@@ -423,7 +423,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/php.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un desarrollador experimentado en PHP con una sólida comprensión de sus fundamentos y una amplia experiencia en la creación de aplicaciones web robustas y escalables. A continuación, detallo mis habilidades y competencias en esta tecnología:</p>
                                     <ul>
@@ -462,7 +462,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ci.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un desarrollador experimentado en C# con una sólida comprensión de sus fundamentos y una amplia experiencia en la creación de aplicaciones robustas y escalables. A continuación, detallo mis habilidades y competencias en esta tecnología:</p>
                                     <ul>
